Update makefile to generate new arduino enums file
Added command to makefile to generate enums.h for Arduino use. Did the same for the dockerfile. Added note on developer-guide markdown file to also update enums.h along with enums.py.

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -32,6 +32,7 @@ all:
 	@$(PY_CMD) ../tools/odrive/version.py --output autogen/version.c
 	@tup --quiet -no-environ-check
 	@$(PY_CMD) interface_generator_stub.py --definitions odrive-interface.yaml --template ../tools/enums_template.j2 --output ../tools/odrive/enums.py
+	@$(PY_CMD) interface_generator_stub.py --definitions odrive-interface.yaml --template ../tools/arduino_enums_template.j2 --output ../Arduino/ODriveArduino/enums.h
 
 # Copy libfibre files to odrivetool if they were built
 	@ ! test -f "fibre-cpp/build/libfibre-linux-amd64.so" || cp fibre-cpp/build/libfibre-linux-amd64.so ../tools/odrive/pyfibre/fibre/
