lift control modes docs into its own sidebar doc

--- a/docs/_data/index.yaml
+++ b/docs/_data/index.yaml
@@ -9,11 +9,13 @@ sections:
         url: /
       - title: ODrive Tool
         url: /odrivetool
+      - title: Control Modes
+        url: /control-modes
       - title: Parameters & Commands
         url: /commands
       - title: Encoders
         url: /encoders
-      - title: Control & Tuning
+      - title: Control Structure & Tuning
         url: /control
       - title: Troubleshooting
         url: /troubleshooting
