implement encoder reference position updates

--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -1073,7 +1073,6 @@ interfaces:
       hall_state: readonly uint8
       vel_estimate: {type: readonly float32, c_getter: vel_estimate_.any().value_or(0.0f)}
       vel_estimate_counts: readonly float32
-      pos_offset_target: float32
       pos_offset: float32
       calib_scan_response: readonly float32
       pos_abs: int32
@@ -1096,6 +1095,7 @@ interfaces:
           enable_phase_interpolation: bool
           bandwidth: {type: float32, c_setter: set_bandwidth}
           pos_offset_bandwidth: float32
+          pos_offset_update_gain: float32
           calib_range: float32
           calib_scan_distance: float32
           calib_scan_omega: float32
@@ -1110,6 +1110,7 @@ interfaces:
             doc: Analog cosine signal of a sin/cos encoder. The corresponding GPIO must be in `GPIO_MODE_ANALOG_IN`.
     functions:
       set_linear_count: {in: {count: int32}}
+      update_pos_offset: {in: {ref_pos: float32}}
 
 
   ODrive.SensorlessEstimator:
