Add CAN Guide to Tutorials Section on docs

--- a/docs/_data/index.yaml
+++ b/docs/_data/index.yaml
@@ -29,6 +29,8 @@ sections:
         url: /hoverboard
       - title: Migration Guide
         url: /migration
+      - title: CAN Guide
+        url: /can-guide
   - title: Interfaces & Protocols
     docs:
       - title: Pinout
