--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -1442,6 +1442,8 @@ valuetypes:
 
           ### Valid Control modes
           * `CONTROL_MODE_POSITION_CONTROL`
+          * `CONTROL_MODE_VELOCITY_CONTROL`
+          * `CONTROL_MODE_TORQUE_CONTROL`
       Tuning:
         brief: Implements a tuning mode
         doc: |
