--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -1063,20 +1063,52 @@ interfaces:
           HALL_NOT_CALIBRATED_YET:
       is_ready: readonly bool
       index_found: readonly bool
-      shadow_count: readonly int32
-      count_in_cpr: readonly int32
+      shadow_count: 
+        type: readonly int32
+        unit: counts
+        doc: Raw linear count from the encoder.
+      count_in_cpr: 
+        type: readonly int32
+        unit: counts
+        doc: Raw circular count from the encoder on [0, cpr)
       interpolation: readonly float32
       phase: {type: readonly float32, c_getter: phase_.any().value_or(0.0f)}
-      pos_estimate: {type: readonly float32, c_getter: pos_estimate_.any().value_or(0.0f)}
-      pos_estimate_counts: readonly float32
-      pos_cpr_counts: readonly float32
-      delta_pos_cpr_counts: readonly float32
-      pos_circular: {type: readonly float32, c_getter: pos_circular_.any().value_or(0.0f)}
+      pos_estimate: 
+        type: readonly float32
+        c_getter: pos_estimate_.any().value_or(0.0f)
+        unit: turns
+        doc: Linear position estimate of the encoder, in turns.  Also known as "multi-turn" position.
+      pos_estimate_counts:
+        type: readonly float32
+        unit: counts
+        doc: Linear position estimate of the encoder, in counts.  Equal to `pos_estimate * config.cpr`
+      pos_circular: 
+        type: readonly float32
+        c_getter: pos_circular_.any().value_or(0.0f)
+        unit: turns
+        doc: Circular position estimate of the encoder, as a decimal from [0, 1).  Also known as "single-turn" position.
+      pos_cpr_counts:
+        type: readonly float32
+        unit: counts
+        doc: Circular position estimate of the encoder, on the space [0, cpr).
+      delta_pos_cpr_counts: 
+        type: readonly float32
+        unit: counts
+        doc: Circular position delta of the encoder in the most recent loop. Primarily for debug purposes, it indicates much the encoder changed since the last time it was checked.
       hall_state: readonly uint8
-      vel_estimate: {type: readonly float32, c_getter: vel_estimate_.any().value_or(0.0f)}
-      vel_estimate_counts: readonly float32
+      vel_estimate: 
+        type: readonly float32
+        c_getter: vel_estimate_.any().value_or(0.0f)
+        unit: turns/s
+        doc: Estimate of the linear velocity of an axis in turns/s
+      vel_estimate_counts: 
+        type: readonly float32
+        unit: counts/sec
+        doc: Estimate of the linear velocity of an axis, in counts/s.
       calib_scan_response: readonly float32
-      pos_abs: int32
+      pos_abs:
+        type: int32
+        doc: The last (valid) position from an absolute encoder, if used.
       spi_error_rate: readonly float32
       config:
         c_is_class: False
