--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -922,20 +922,19 @@ interfaces:
           pos_gain:
             type: float32
             unit: (turn/s) / turn
-            doc: units = (turn/s) / turn, default = 20
+            doc: units = (turn/s) / turn
           vel_gain:
             type: float32
-            unit: 'Nm/(turn/s)'
-            doc: units = 'Nm/(turn/s), default = 0.16
+            unit: Nm / (turn/s)
+            doc: units = Nm / (turn/s)
           vel_integrator_gain:
             type: float32
-            unit: Nm/(turn/s * s)
-            doc: units = Nm/(turn/s * s), default = 0.32
-            doc: units = 'Nm/(turn/s), default = 0.16
+            unit: Nm / (turn/s * s)
+            doc: units = Nm / (turn/s * s)
           vel_integrator_limit:
             type: float32
             unit: Nm
-            doc: Limit the integrator output (independent of proportional gain output) to prevent 'integrator windup'. Set to infinity to disable. Units = Nm, default = inf
+            doc: Limit the integrator output (independent of proportional gain output). Set to infinity to disable. Units = Nm
           vel_limit:
             type: float32
             unit: turn/s
